examples/avm-res-network-networkmanager/0.3.0/README.md
<!-- BEGIN_TF_DOCS -->
<!-- Code generated by terraform-docs. DO NOT EDIT. -->
# terraform-azurerm-avm-network-networkmanager

Module to deploy Azure Virtual Network Manager

<!-- markdownlint-disable MD033 -->
## Requirements

The following requirements are needed by this module:

- <a name="requirement_terraform"></a> [terraform](#requirement\_terraform) (>= 1.9, < 2.0)

- <a name="requirement_azapi"></a> [azapi](#requirement\_azapi) (~> 2.4)

- <a name="requirement_azurerm"></a> [azurerm](#requirement\_azurerm) (>= 3.71, < 5.0.0)

- <a name="requirement_modtm"></a> [modtm](#requirement\_modtm) (~> 0.3)

- <a name="requirement_random"></a> [random](#requirement\_random) (~> 3.5)

## Resources

The following resources are used by this module:

- [azurerm_management_lock.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/management_lock) (resource)
- [azurerm_monitor_diagnostic_setting.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/monitor_diagnostic_setting) (resource)
- [azurerm_network_manager.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/network_manager) (resource)
- [azurerm_role_assignment.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/role_assignment) (resource)
- [modtm_telemetry.telemetry](https://registry.terraform.io/providers/Azure/modtm/latest/docs/resources/telemetry) (resource)
- [random_uuid.telemetry](https://registry.terraform.io/providers/hashicorp/random/latest/docs/resources/uuid) (resource)
- [azapi_client_config.telemetry](https://registry.terraform.io/providers/Azure/azapi/latest/docs/data-sources/client_config) (data source)
- [modtm_module_source.telemetry](https://registry.terraform.io/providers/Azure/modtm/latest/docs/data-sources/module_source) (data source)

<!-- markdownlint-disable MD013 -->
## Required Inputs

The following input variables are required:

### <a name="input_location"></a> [location](#input\_location)

Description: (Required) Specifies the Azure Region where the Network Managers should exist. Changing this forces a new resource to be created.

Type: `string`

### <a name="input_name"></a> [name](#input\_name)

Description: (Required) Specifies the name which should be used for this Network Managers. Changing this forces a new Network Managers to be created.

Type: `string`

### <a name="input_network_manager_scope"></a> [network\_manager\_scope](#input\_network\_manager\_scope)

Description:   - `management_group_ids` - (Optional) A list of management group IDs.
  - `subscription_ids` - (Optional) A list of subscription IDs.

Type:

```hcl
object({
    management_group_ids = optional(list(string))
    subscription_ids     = optional(list(string))
  })
```

### <a name="input_network_manager_scope_accesses"></a> [network\_manager\_scope\_accesses](#input\_network\_manager\_scope\_accesses)

Description: (Required) Scope Access (Also known as features). A list of configuration deployment type. Possible values are `Connectivity`, `SecurityAdmin`, and `Routing`. The connectivity feature allows you to create network topologies at scale. The security admin feature lets you create high-priority security rules, which take precedence over NSGs. The routing feature allows you to describe your desired routing behavior and orchestrate user-defined routes (UDRs) to create and maintain the desired routing behavior. If none of the features are required, then this parameter does not need to be specified, which then only enables features like `IPAM` and `Virtual Network Verifier`.

Type: `list(string)`

### <a name="input_resource_group_name"></a> [resource\_group\_name](#input\_resource\_group\_name)

Description: (Required) Specifies the name of the Resource Group where the Network Managers should exist. Changing this forces a new Network Managers to be created.

Type: `string`

## Optional Inputs

The following input variables are optional (have default values):

### <a name="input_connectivity_configurations"></a> [connectivity\_configurations](#input\_connectivity\_configurations)

Description:   A map of connectivity configurations to create on the Network Manager. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.
  `name` - (Required) The name of the connectivity configuration.
  `description` - (Optional) The description of the connectivity configuration.
  `applies_to_groups` - (Required) A list of network groups that the connectivity configuration applies to.
    - `group_connectivity` - (Required) The type of connectivity for the group. `DirectlyConnected` and `None`.
    - `is_global` - (Optional) A boolean value indicating whether this group entry supports global VNet peering (i.e. peering across Azure regions). Defaults to false.
    - `network_group_key` - (Required) The map key of the network group (from `var.network_groups`) that the connectivity configuration applies to.
    - `use_hub_gateway` - (Optional) A boolean value indicating whether or not to use a hub gateway for this connectivity configuration. This is only applicable if the topology is set to `HubAndSpoke`. Defaults to false.
  `connectivity_topology` - (Required) The topology of the connectivity configuration. Possible values are `HubAndSpoke` and `Mesh`.
  `connectivity_capabilities` - (Optional) The connectivity capabilities of the connectivity configuration.
    - `connected_group_address_overlap` - (Optional) Possible values are `Allowed` and `Disallowed`.
    - `connected_group_private_endpoints_scale` - (Optional) Possible values are `HighScale` and `Standard`.
    - `peering_enforcement` - (Optional) Possible values are `Enforced` and `Unenforced`.
  `hubs` - (Optional) A list of hubs to associate with the connectivity configuration. This is only applicable if the topology is set to `HubAndSpoke`.
    - `resource_id` - (Required) The resource ID of the hub.
    - `resource_type` - (Required) The resource type of the hub. Possible values are `Microsoft.Network/virtualNetworks`.
  `delete_existing_peering` - (Optional) A boolean value indicating whether or not to delete existing peerings.
  `is_global` - (Optional) A boolean value indicating whether the connectivity configuration supports global VNet peering (i.e. peering across Azure regions). Defaults to false.

Type:

```hcl
map(object({
    name        = string
    description = optional(string, null)
    applies_to_groups = list(object({
      group_connectivity = string
      is_global          = optional(bool, false)
      network_group_key  = string
      use_hub_gateway    = optional(bool, false)
    }))
    connectivity_topology = string
    connectivity_capabilities = optional(object({
      connected_group_address_overlap         = string
      connected_group_private_endpoints_scale = string
      peering_enforcement                     = string
    }), null)
    hubs = optional(list(object({
      resource_id   = string
      resource_type = string
    })), [])
    delete_existing_peering = optional(bool, false)
    is_global               = optional(bool, false)
  }))
```

Default: `{}`

### <a name="input_description"></a> [description](#input\_description)

Description: (Optional) A description of the network manager.

Type: `string`

Default: `null`

### <a name="input_diagnostic_settings"></a> [diagnostic\_settings](#input\_diagnostic\_settings)

Description:   A map of diagnostic settings to create on the Network Manager. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.

  - `name` - (Optional) The name of the diagnostic setting. One will be generated if not set, however this will not be unique if you want to create multiple diagnostic setting resources.
  - `log_categories` - (Optional) A set of log categories to send to the log analytics workspace. Defaults to `[]`.
  - `log_groups` - (Optional) A set of log groups to send to the log analytics workspace. Defaults to `["allLogs"]`.
  - `metric_categories` - (Optional) A set of metric categories to send to the log analytics workspace. Defaults to `["AllMetrics"]`.
  - `log_analytics_destination_type` - (Optional) The destination type for the diagnostic setting. Possible values are `Dedicated` and `AzureDiagnostics`. Defaults to `Dedicated`.
  - `workspace_resource_id` - (Optional) The resource ID of the log analytics workspace to send logs and metrics to.
  - `storage_account_resource_id` - (Optional) The resource ID of the storage account to send logs and metrics to.
  - `event_hub_authorization_rule_resource_id` - (Optional) The resource ID of the event hub authorization rule to send logs and metrics to.
  - `event_hub_name` - (Optional) The name of the event hub. If none is specified, the default event hub will be selected.
  - `marketplace_partner_resource_id` - (Optional) The full ARM resource ID of the Marketplace resource to which you would like to send Diagnostic Logs.

Type:

```hcl
map(object({
    name                                     = optional(string, null)
    log_categories                           = optional(set(string), [])
    log_groups                               = optional(set(string), ["allLogs"])
    metric_categories                        = optional(set(string), ["AllMetrics"])
    log_analytics_destination_type           = optional(string, "Dedicated")
    workspace_resource_id                    = optional(string, null)
    storage_account_resource_id              = optional(string, null)
    event_hub_authorization_rule_resource_id = optional(string, null)
    event_hub_name                           = optional(string, null)
    marketplace_partner_resource_id          = optional(string, null)
  }))
```

Default: `{}`

### <a name="input_enable_telemetry"></a> [enable\_telemetry](#input\_enable\_telemetry)

Description: This variable controls whether or not telemetry is enabled for the module.  
For more information see <https://aka.ms/avm/telemetryinfo>.  
If it is set to false, then no telemetry will be collected.

Type: `bool`

Default: `true`

### <a name="input_lock"></a> [lock](#input\_lock)

Description:   Controls the Resource Lock configuration for this resource. The following properties can be specified:

  - `kind` - (Required) The type of lock. Possible values are `\"CanNotDelete\"` and `\"ReadOnly\"`.
  - `name` - (Optional) The name of the lock. If not specified, a name will be generated based on the `kind` value. Changing this forces the creation of a new resource.

Type:

```hcl
object({
    kind = string
    name = optional(string, null)
  })
```

Default: `null`

### <a name="input_network_groups"></a> [network\_groups](#input\_network\_groups)

Description:   A map of network groups to create on the Network Manager. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.
  `name` - (Required) The name of the network group.
  `description` - (Optional) The description of the network group.
  `member_type` - (Optional) The type of the group member. Subnet member type is used for routing configurations. Possible values are `Subnet` and `VirtualNetwork`.
  `static_members` - (Optional) A map of static members to add to the network group.
    - `name` - (Required) The name of the static member.
    - `target_resource_id` - (Required) The ID of the target resource to associate with the static member.

Type:

```hcl
map(object({
    name        = string
    description = optional(string)
    member_type = optional(string)
    static_members = optional(list(object({
      name               = string
      target_resource_id = string
    })), [])
  }))
```

Default: `{}`

### <a name="input_network_manager_timeouts"></a> [network\_manager\_timeouts](#input\_network\_manager\_timeouts)

Description:   - `create` - (Defaults to 30 minutes) Used when creating the Network Managers.
  - `delete` - (Defaults to 30 minutes) Used when deleting the Network Managers.
  - `read` - (Defaults to 5 minutes) Used when retrieving the Network Managers.
  - `update` - (Defaults to 30 minutes) Used when updating the Network Managers.

Type:

```hcl
object({
    create = optional(string)
    delete = optional(string)
    read   = optional(string)
    update = optional(string)
  })
```

Default: `null`

### <a name="input_role_assignments"></a> [role\_assignments](#input\_role\_assignments)

Description:   A map of role assignments to create on the Network Manager. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.

  - `role_definition_id_or_name` - The ID or name of the role definition to assign to the principal.
  - `principal_id` - The ID of the principal to assign the role to.
  - `description` - (Optional) The description of the role assignment.
  - `skip_service_principal_aad_check` - (Optional) If set to true, skips the Azure Active Directory check for the service principal in the tenant. Defaults to false.
  - `condition` - (Optional) The condition which will be used to scope the role assignment.
  - `condition_version` - (Optional) The version of the condition syntax. Leave as `null` if you are not using a condition, if you are then valid values are '2.0'.
  - `delegated_managed_identity_resource_id` - (Optional) The delegated Azure Resource Id which contains a Managed Identity. Changing this forces a new resource to be created. This field is only used in cross-tenant scenario.
  - `principal_type` - (Optional) The type of the `principal_id`. Possible values are `User`, `Group` and `ServicePrincipal`. It is necessary to explicitly set this attribute when creating role assignments if the principal creating the assignment is constrained by ABAC rules that filters on the PrincipalType attribute.

  > Note: only set `skip_service_principal_aad_check` to true if you are assigning a role to a service principal.

Type:

```hcl
map(object({
    role_definition_id_or_name             = string
    principal_id                           = string
    description                            = optional(string, null)
    skip_service_principal_aad_check       = optional(bool, false)
    condition                              = optional(string, null)
    condition_version                      = optional(string, null)
    delegated_managed_identity_resource_id = optional(string, null)
    principal_type                         = optional(string, null)
  }))
```

Default: `{}`

### <a name="input_routing_configurations"></a> [routing\_configurations](#input\_routing\_configurations)

Description:   A map of routing configurations to create on the Network Manager. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.
  `name` - (Required) The name of the routing configuration.
  `description` - (Optional) The description of the routing configuration.
  `route_table_usage_mode` - (Optional) The route table usage mode for the routing configuration. Possible values are `ManagedOnly` and `UseExisting`.
  `rule_collections` - (Optional) A map of rule collections to create on the routing configuration.
    - `name` - (Required) The name of the rule collection.
    - `description` - (Optional) The description of the rule collection.
    - `applies_to` - (Required) A list of network groups that the rule collection applies to.
      - `network_group_key` - (Required) The map key of the network group (from `var.network_groups`) that the rule collection applies to.
    - `disable_bgp_route_propagation` - (Optional) A boolean value indicating whether or not to disable BGP route propagation for this rule collection. Defaults to true.
    - `rules` - (Required) A map of rules to create on the rule collection.
      - `name` - (Required) The name of the rule.
      - `description` - (Optional) The description of the rule.
      - `destination` - (Required) The destination for the route.
        - `type` - (Required) The type of destination. Possible values are `AddressPrefix` and `ServiceTag`.
        - `destination_address` - (Required) The destination address. If the destination type is AddressPrefix, then this must be a valid CIDR notation. If the destination type is ServiceTag, then this must be a valid service tag.
      - `next_hop` - (Required) The next hop for the route.
        - `next_hop_type` - (Required) The type of next hop. Possible values are `VirtualAppliance`, `Internet`, `VirtualNetworkGateway`, `VnetLocal`, and `NoNextHop`.
        - `next_hop_address` - (Conditional) The next hop address. This is only applicable if the next hop type is VirtualAppliance, in which case this must be a valid IP address.

Type:

```hcl
map(object({
    name                   = string
    description            = optional(string, null)
    route_table_usage_mode = optional(string, "ManagedOnly")
    rule_collections = optional(map(object({
      name        = string
      description = optional(string, null)
      applies_to = list(object({
        network_group_key = string
      }))
      disable_bgp_route_propagation = optional(bool, true)
      rules = map(object({
        name        = string
        description = optional(string, null)
        destination = object({
          type                = string
          destination_address = string
        })
        next_hop = object({
          next_hop_type    = string
          next_hop_address = optional(string, null)
        })
      }))
    })), {})
  }))
```

Default: `{}`

### <a name="input_scope_connections"></a> [scope\_connections](#input\_scope\_connections)

Description:   (Optional) A map of scope connections to create on the Network Manager. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time. Scope Connections to create for the network manager. Allows network manager to manage resources from another tenant. Supports management groups or subscriptions from another tenant.
  `name` - (Required) The name of the scope connection.
  `description` - (Optional) The description of the scope connection.
  `resource_id` - (Required) The resource ID of the scope to connect to. Can be a management group or subscription.
  `tenant_id` - (Required) The tenant ID of the scope to connect to.

Type:

```hcl
map(object({
    name        = string
    description = optional(string, null)
    resource_id = string
    tenant_id   = string
  }))
```

Default: `{}`

### <a name="input_security_admin_configurations"></a> [security\_admin\_configurations](#input\_security\_admin\_configurations)

Description:   A map of security admin configurations to create on the Network Manager. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.
  `name` - (Required) The name of the security admin configuration.
  `description` - (Optional) The description of the security admin configuration.
  `apply_on_network_intent_policy_based_services` - (Required) A list of network intent policy-based services that the security admin configuration applies to. Possible values are `All`, `AllowRulesOnly` and `None`.
  `network_group_address_space_aggregation_option` - (Optional) The network group address space aggregation option for the security admin configuration. Possible values are `None`, and `Manual`.
  `rule_collections` - (Optional) A map of rule collections to create on the security admin configuration.
    - `name` - (Required) The name of the rule collection.
    - `description` - (Optional) The description of the rule collection.
    - `applies_to_groups` - (Required) A list of network groups that the rule collection applies to.
      - `network_group_key` - (Required) The map key of the network group (from `var.network_groups`) that the rule collection applies to.
    - `rules` - (Required) A map of rules to create on the rule collection.
      - `name` - (Required) The name of the rule.
      - `access` - (Required) The access type of the rule. Possible values are `Allow`, `AlwaysAllow` and `Deny`.
      - `description` - (Optional) The description of the rule.
      - `destination_port_ranges` - (Optional) A list of destination port ranges for the rule. This is only applicable for security rules. Each item in the list must be either a single port number or a port range in the format "start-end".
      - `destinations` - (Optional) A list of destinations for the rule. This is only applicable for security rules.
        - `address_prefix_type` - (Required) The type of address prefix. Possible values are `IPPrefix`, `ServiceTag`.
        - `address_prefix` - (Required) The address prefix. If the address prefix type is IPPrefix, then this must be a valid CIDR notation. If the address prefix type is ServiceTag, then this must be a valid service tag.
      - `direction` - (Required) The direction of the rule. Possible values are `Inbound` and `Outbound`.
      - `priority` - (Required) The priority of the rule. Must be an integer between 1 and 4096, inclusive. Rules with a lower priority number are processed before rules with a higher priority number.
      - `protocol` - (Required) The protocol of the rule. Possible values are `Ah`, `Any`, `Esp`, `Icmp`, `Tcp`, and `Udp`.
      - `source_port_ranges` - (Optional) A list of source port ranges for the rule. This is only applicable for security rules. Each item in the list must be either a single port number or a port range in the format "start-end".
      - `sources` - (Optional) A list of sources for the rule. This is only applicable for security rules.
        - `address_prefix_type` - (Required) The type of address prefix. Possible values are `IPPrefix`, `ServiceTag`.
        - `address_prefix` - (Required) The address prefix. If the address prefix type is IPPrefix, then this must be a valid CIDR notation. If the address prefix type is ServiceTag, then this must be a valid service tag.

Type:

```hcl
map(object({
    name                                           = string
    description                                    = optional(string, null)
    apply_on_network_intent_policy_based_services  = list(string)
    network_group_address_space_aggregation_option = optional(string, "None")
    rule_collections = optional(map(object({
      name        = string
      description = optional(string, null)
      applies_to_groups = list(object({
        network_group_key = string
      }))
      rules = map(object({
        name                    = string
        access                  = string
        description             = optional(string, null)
        destination_port_ranges = optional(list(string), null)
        destinations = optional(list(object({
          address_prefix_type = string
          address_prefix      = string
        })), null)
        direction          = string
        priority           = number
        protocol           = string
        source_port_ranges = optional(list(string), null)
        sources = optional(list(object({
          address_prefix_type = string
          address_prefix      = string
        })), null)
      }))
    })), {})
  }))
```

Default: `{}`

### <a name="input_tags"></a> [tags](#input\_tags)

Description: (Optional) A mapping of tags to assign to the resource.

Type: `map(string)`

Default: `null`

## Outputs

The following outputs are exported:

### <a name="output_name"></a> [name](#output\_name)

Description: The name of the Network Manager.

### <a name="output_resource"></a> [resource](#output\_resource)

Description: The full output for the Network Manager.

### <a name="output_resource_id"></a> [resource\_id](#output\_resource\_id)

Description: The ID of the Network Manager.

## Modules

The following Modules are called:

### <a name="module_connectivity_configuration"></a> [connectivity\_configuration](#module\_connectivity\_configuration)

Source: ./modules/connectivity-configuration

Version:

### <a name="module_network_groups"></a> [network\_groups](#module\_network\_groups)

Source: ./modules/network-group

Version:

### <a name="module_routing_configuration"></a> [routing\_configuration](#module\_routing\_configuration)

Source: ./modules/routing-configuration

Version:

### <a name="module_scope_connection"></a> [scope\_connection](#module\_scope\_connection)

Source: ./modules/scope-connection

Version:

### <a name="module_security_admin_configuration"></a> [security\_admin\_configuration](#module\_security\_admin\_configuration)

Source: ./modules/security-admin-configuration

Version:

<!-- markdownlint-disable-next-line MD041 -->
## Data Collection

The software may collect information about you and your use of the software and send it to Microsoft. Microsoft may use this information to provide services and improve our products and services. You may turn off the telemetry as described in the repository. There are also some features in the software that may enable you and Microsoft to collect data from users of your applications. If you use these features, you must comply with applicable law, including providing appropriate notices to users of your applications together with a copy of Microsoft’s privacy statement. Our privacy statement is located at <https://go.microsoft.com/fwlink/?LinkID=824704>. You can learn more about data collection and use in the help documentation and our privacy statement. Your use of the software operates as your consent to these practices.
<!-- END_TF_DOCS -->
